こっからっす！

--- a/corporation/templates/corporation_base.html
+++ b/corporation/templates/corporation_base.html
@@ -121,8 +121,8 @@
                                    class="link-body-emphasis d-inline-flex text-decoration-none rounded">メガバンク</a></li>
                             <li><a href="{% url 'corporation' %}?query=証券 證券"
                                    class="link-body-emphasis d-inline-flex text-decoration-none rounded">証券</a></li>
-                            <li><a href="{% url 'corporation' %}?query=保険"
-                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">保険</a></li>
+                            <li><a href="{% url 'corporation' %}?query=生命 海上日動 損保"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">生損保</a></li>
                             <li><a href="{% url 'corporation' %}?query=カード リース"
                                    class="link-body-emphasis d-inline-flex text-decoration-none rounded">カード・リース</a>
                             </li>
