範囲検索の実装

--- a/corporation/templates/corporation_base.html
+++ b/corporation/templates/corporation_base.html
@@ -252,13 +252,13 @@
             </p>
             <div class="collapse" id="rank-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-            <li><a href='{% url 'corporation' %}?query=81 79 80' class="link-body-emphasis d-inline-flex text-decoration-none rounded">スーパーエリート</a></li>
-                <li><a href='{% url 'corporation' %}?query=78 77 76' class="link-body-emphasis d-inline-flex text-decoration-none rounded">海内トップ大勝ち</a></li>
-              <li><a href='{% url 'corporation' %}?query=75 74 73 72 71 70' class="link-body-emphasis d-inline-flex text-decoration-none rounded">東京一工勝ち</a></li>
-              <li><a href='{% url 'corporation' %}?query=69 68' class="link-body-emphasis d-inline-flex text-decoration-none rounded">早慶地帝優秀層勝ち</a></li>
-              <li><a href='{% url 'corporation' %}?query=67 66 65 64 63' class="link-body-emphasis d-inline-flex text-decoration-none rounded">早慶地帝勝ち</a></li>
-              <li><a href='{% url 'corporation' %}?query=62 61 60' class="link-body-emphasis d-inline-flex text-decoration-none rounded">MARCH関関同立優秀層勝ち</a></li>
-              <li><a href='{% url 'corporation' %}?query=59 58 57 56 55' class="link-body-emphasis d-inline-flex text-decoration-none rounded">MARCH関関同立勝ち</a></li>
+            <li><a href='{% url 'corporation' %}?query=79~81' class="link-body-emphasis d-inline-flex text-decoration-none rounded">スーパーエリート</a></li>
+                <li><a href='{% url 'corporation' %}?query=76~78' class="link-body-emphasis d-inline-flex text-decoration-none rounded">海内トップ大勝ち</a></li>
+              <li><a href='{% url 'corporation' %}?query=70~75' class="link-body-emphasis d-inline-flex text-decoration-none rounded">東京一工勝ち</a></li>
+              <li><a href='{% url 'corporation' %}?query=68 69' class="link-body-emphasis d-inline-flex text-decoration-none rounded">早慶地帝優秀層勝ち</a></li>
+              <li><a href='{% url 'corporation' %}?query=63~67' class="link-body-emphasis d-inline-flex text-decoration-none rounded">早慶地帝勝ち</a></li>
+              <li><a href='{% url 'corporation' %}?query=60~62' class="link-body-emphasis d-inline-flex text-decoration-none rounded">MARCH関関同立優秀層勝ち</a></li>
+              <li><a href='{% url 'corporation' %}?query=55~59' class="link-body-emphasis d-inline-flex text-decoration-none rounded">MARCH関関同立勝ち</a></li>
           </ul>
             </div>
             <!-- 偏差値別検索 END -->
