--- a/corporation/templates/corporation_search.html
+++ b/corporation/templates/corporation_search.html
@@ -3,57 +3,64 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<title>就職偏差値サーチ</title>
+    <title>就職偏差値サーチ</title>
 </head>
 <body>
 <!--ここからメイン-->
-<div class="main-content">
-    <h1>Corporation Search</h1>
-    <form class="search-form" method="get">
-        <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="企業名or就職偏差値">
-        <button class="search-button btn btn-primary" type="submit">Search</button>
-    </form>
+{% if user_agent.device.family == "iPhone" %}
+    <div class="center-main-content">
+{% else %}
+    <div class="main-content">
+{% endif %}
+<h1>Corporation Search</h1>
+<form class="search-form" method="get">
+    <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="企業名or就職偏差値">
+    <button class="search-button btn btn-primary" type="submit">Search</button>
+</form>
 <div style="text-align: right; margin-right: 20px">
     <a href="high_school">高校さんへ</a>
     <a href="university">大学さんへ</a>
 </div>
-    <div class="search-results">
-        {% if corporations %}
-            <h2>Search Results:</h2>
-            <table>
+<div class="search-results">
+    {% if corporations %}
+        <h2>Search Results:</h2>
+        <table>
+            <tr>
+                <th><font color="#333333">企業名(職種)</font></th>
+                <th><font color="#333333">就職偏差値</font></th>
+            </tr>
+            {% for corporation in corporations %}
                 <tr>
-                    <th><font color="#333333">企業名(職種)</font></th>
-                    <th><font color="#333333">就職偏差値</font></th>
+                    <td>{{ corporation.name }}</td>
+                    <td>{{ corporation.value }}</td>
                 </tr>
-                {% for corporation in corporations %}
-                    <tr>
-                        <td>{{ corporation.name }}</td>
-                        <td>{{ corporation.value }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        {% else %}
-            <p class="no-results">No results found.</p>
-        {% endif %}
-    </div>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p class="no-results">No results found.</p>
+    {% endif %}
+</div>
 </div>
 
-<!-- サイドバー下部 -->
-<!-- アカウントメニュー -->
-<div class="account-menu border-top">
-  <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-          幹部様はこちら
+{% if user_agent.device.family != 'iPhone' %}
+    <!-- サイドバー下部 -->
+    <!-- アカウントメニュー -->
+    <div class="account-menu border-top">
+        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse"
+                data-bs-target="#account-collapse" aria-expanded="false">
+            幹部様はこちら
         </button>
         <div class="collapse" id="account-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a></li>
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a></li>
-  </ul>
-</div>
-    <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
-</div>
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a></li>
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a></li>
+            </ul>
+        </div>
+        <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
+    </div>
+{% endif %}
 
 </body>
 </html>
