高校さんや大学さんも対応

--- a/corporation/templates/corporation_base.html
+++ b/corporation/templates/corporation_base.html
@@ -78,7 +78,11 @@
     <div class="flex-shrink-0 p-3" style="width: 280px; margin-bottom: 100px">
         <!-- 左上サービス名 -->
         <p class="d-flex pb-3 mb-3">
+            {% if user_agent.device.family == "iPhone" %}
             <span class="fs-5 fw-semibold" style="margin-top: 50px"><strong>なんでもランキング.com</strong></span>
+            {% else %}
+            <span class="fs-5 fw-semibold"><strong>なんでもランキング.com</strong></span>
+            {% endif %}
         </p>
         <!-- 業界ごと検索 -->
         <p class="d-flex pb-3 mb-3 border-top">
