--- a/highschool/templates/high_school_search.html
+++ b/highschool/templates/high_school_search.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-<div class="main-content">
+{% if user_agent.device.family == "iPhone" %}
+    <div class="center-main-content">
+{% else %}
+    <div class="main-content">
+{% endif %}
     <h1>HighSchool Search</h1>
     <form class="search-form" method="get">
         <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="高校名or高校偏差値">
@@ -38,21 +42,24 @@
     </div>
 </div>
 
-<!-- サイドバー下部 -->
-<!-- アカウントメニュー -->
-<div class="account-menu border-top">
-  <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-          幹部様はこちら
+{% if user_agent.device.family != 'iPhone' %}
+    <!-- サイドバー下部 -->
+    <!-- アカウントメニュー -->
+    <div class="account-menu border-top">
+        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse"
+                data-bs-target="#account-collapse" aria-expanded="false">
+            幹部様はこちら
         </button>
         <div class="collapse" id="account-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a></li>
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a></li>
-  </ul>
-</div>
-    <div style="margin-top: 10px">© 2023 駿台</div>
-</div>
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a></li>
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
+                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a></li>
+            </ul>
+        </div>
+        <div style="margin-top: 10px">© 2023 駿台予備校</div>
+    </div>
+{% endif %}
 </body>
 </html>
