正解を表示、messageの改良

--- a/highschool/templates/high_school_quiz.html
+++ b/highschool/templates/high_school_quiz.html
@@ -26,6 +26,8 @@
 </div>
 <h1>
     {{ result }}
+    <br>
+    {{ answer }}
 </h1>
 </div>
 </div>
@@ -41,8 +43,10 @@
         <div class="collapse" id="account-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                 <li><a href="./" class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
-                <li><a href="high_school" class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
-                <li><a href="university" class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
+                <li><a href="high_school"
+                       class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
+                <li><a href="university"
+                       class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
             </ul>
         </div>
         <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
