--- a/university/templates/university_quiz.html
+++ b/university/templates/university_quiz.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<title>大学格付けサーチ</title>
+    <title>大学格付けサーチ</title>
 </head>
 <body>
 <!--ここからメイン-->
@@ -12,7 +12,7 @@
 {% else %}
     <div class="main-content">
 {% endif %}
-    <h1>University Quiz</h1>
+<h1>University Quiz</h1>
 
 <form method="post" class="search-form">
     {% csrf_token %}
@@ -26,6 +26,8 @@
 </div>
 <h1>
     {{ result }}
+    <br>
+    {{ answer }}
 </h1>
 </div>
 </div>
@@ -41,8 +43,10 @@
         <div class="collapse" id="account-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                 <li><a href="./" class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
-                <li><a href="high_school" class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
-                <li><a href="university" class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
+                <li><a href="high_school"
+                       class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
+                <li><a href="university"
+                       class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
             </ul>
         </div>
         <div style="margin-top: 10px">© 2023 格付けの会</div>
