--- a/corporation/templates/corporation_base.html
+++ b/corporation/templates/corporation_base.html
@@ -292,23 +292,45 @@
         <!-- 偏差値別検索 END -->
         <!-- アカウントメニュー -->
         {% if user_agent.device.family == 'iPhone' %}
-        <div class="hidden-account-menu border-top" id="hidden-account-menu">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse"
-                    data-bs-target="#account-collapse" aria-expanded="false">
-                幹部様はこちら
-            </button>
-            <div class="collapse" id="account-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a>
-                    </li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a>
-                    </li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a></li>
-                </ul>
-            </div>
-            <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
-        </div>
+            {% if "quiz" in request.get_full_path %}
+                <div class="hidden-account-menu border-top" id="hidden-account-menu">
+                    <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#account-collapse" aria-expanded="false">
+                        表検索はこちら
+                    </button>
+                    <div class="collapse" id="account-collapse">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                            <li><a href="./"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
+                            <li><a href="high_school"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
+                            <li><a href="university"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
+                        </ul>
+                    </div>
+                    <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
+                </div>
+            {% else %}
+                <div class="hidden-account-menu border-top" id="hidden-account-menu">
+                    <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#account-collapse" aria-expanded="false">
+                        クイズはこちら
+                    </button>
+                    <div class="collapse" id="account-collapse">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                            <li><a href="{% url 'corporation_quiz' %}"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
+                            <li><a href="{% url 'highschool:high_school_quiz' %}"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
+                            <li><a href="{% url 'university:university_quiz' %}"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
+                        </ul>
+                    </div>
+                    <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
+                </div>
+            {% endif %}
         {% endif %}
         <!-- アカウントメニュー END -->
     </div>
