--- a/corporation/templates/corporation_quiz.html
+++ b/corporation/templates/corporation_quiz.html
@@ -41,7 +41,7 @@
             表検索はこちら
         </button>
         <div class="collapse" id="account-collapse">
-            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
                 <li><a href="./" class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
                 <li><a href="high_school"
                        class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
