--- a/university/templates/university_base.html
+++ b/university/templates/university_base.html
@@ -78,11 +78,11 @@
     {% endif %}
     <div class="flex-shrink-0 p-3" style="width: 280px; margin-bottom: 100px">
         <p class="d-flex pb-3 mb-3">
-        {% if user_agent.device.family == "iPhone" %}
-            <span class="fs-5 fw-semibold" style="margin-top: 50px"><strong>なんでもランキング.com</strong></span>
-        {% else %}
-            <span class="fs-5 fw-semibold"><strong>なんでもランキング.com</strong></span>
-        {% endif %}
+            {% if user_agent.device.family == "iPhone" %}
+                <span class="fs-5 fw-semibold" style="margin-top: 50px"><strong>なんでもランキング.com</strong></span>
+            {% else %}
+                <span class="fs-5 fw-semibold"><strong>なんでもランキング.com</strong></span>
+            {% endif %}
         </p>
         <p class="d-flex pb-3 mb-3 border-bottom">
             <svg class="bi me-2" width="30" height="24">
@@ -143,32 +143,50 @@
         </ul>
         <!-- アカウントメニュー -->
         {% if user_agent.device.family == 'iPhone' %}
-            <div class="hidden-account-menu border-top" id="hidden-account-menu">
-                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#account-collapse" aria-expanded="false">
-                    幹部様はこちら
-                </button>
-                <div class="collapse" id="account-collapse">
-                    <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                        <li><a href="#"
-                               class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a>
-                        </li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a>
-                        </li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a>
-                        </li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a>
-                        </li>
-                    </ul>
+            {% if "quiz" in request.get_full_path %}
+                <div class="hidden-account-menu border-top" id="hidden-account-menu">
+                    <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#account-collapse" aria-expanded="false">
+                        表検索はこちら
+                    </button>
+                    <div class="collapse" id="account-collapse">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                            <li><a href="./"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
+                            <li><a href="high_school"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
+                            <li><a href="university"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
+                        </ul>
+                    </div>
+                    <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
                 </div>
-                <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
-            </div>
+            {% else %}
+                <div class="hidden-account-menu border-top" id="hidden-account-menu">
+                    <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#account-collapse" aria-expanded="false">
+                        クイズはこちら
+                    </button>
+                    <div class="collapse" id="account-collapse">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                            <li><a href="{% url 'corporation_quiz' %}"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
+                            <li><a href="{% url 'highschool:high_school_quiz' %}"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
+                            <li><a href="{% url 'university:university_quiz' %}"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
+                        </ul>
+                    </div>
+                    <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
+                </div>
+            {% endif %}
         {% endif %}
         <!-- アカウントメニュー END -->
     </div>
     </div>
-<script>
+    <script>
         // JavaScript
         document.addEventListener("DOMContentLoaded", function () {
             // ハンバーガーメニューとサイドバーの要素を取得
