選択式のクイズを導入！！

--- a/corporation/templates/corporation_base.html
+++ b/corporation/templates/corporation_base.html
@@ -57,6 +57,11 @@
         th {
             background-color: #f2f2f2;
         }
+
+        .select-quiz {
+            width: 10vw;
+            hei
+        }
     </style>
 </head>
 <body>
