高校さんにも選択形式対応、選択しないと勝負できないように変更

--- a/corporation/templates/corporation_quiz.html
+++ b/corporation/templates/corporation_quiz.html
@@ -31,7 +31,7 @@
     </div>
 
     <div id="guess">
-        <input class="search-input" type="number" name="guess" placeholder="就職偏差値を答える">
+        <input class="search-input" type="number" name="guess" placeholder="就職偏差値を答える" required>
         <button class="search-button btn btn-primary" type="submit">勝負します！</button>
     </div>
 
