--- a/highschool/templates/high_school_base.html
+++ b/highschool/templates/high_school_base.html
@@ -60,7 +60,11 @@
             th {
                 background-color: #f2f2f2;
             }
-        </style>
+
+            .select-quiz {
+                width: 10vw;
+                hei
+            }        </style>
 </head>
 <body>
 <main class="d-flex">
