--- a/highschool/templates/high_school_base.html
+++ b/highschool/templates/high_school_base.html
@@ -12,6 +12,19 @@
     <title>HighSchool Search | なんでもランキング.com</title>
     <!-- アイコンの設定 -->
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none"></svg>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0HR9Q8GFE8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-0HR9Q8GFE8');
+    </script>
     <symbol id="bootstrap" viewBox="0 0 118 94">
         <style>
             body {
